--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
             .attr("width", width)
             .attr("height", height);
 
-        console.log("SVG container initialized with dimensions:", { width, height });
+        // Create linear scale for x-axis
+        const xScale = d3.scaleLinear()
+            .domain([d3.min(data), d3.max(data)])
+            .range([50, 500]);
+
+        console.log("Linear scale configured for bar widths:", {
+            domain: xScale.domain(),
+            range: xScale.range()
+        });
     </script>
 </body>
 </html>
+
