--- a/index.html
+++ b/index.html
@@ -10,36 +10,56 @@
         body {
             font-family: Arial, sans-serif;
         }
+        .bar {
+            fill: steelblue;
+        }
+        .bar text {
+            fill: white;
+            font: 12px sans-serif;
+        }
     </style>
 </head>
 <body>
     <h1>Dynamic Bar Chart with D3.js</h1>
-    <!-- SVG container will be added here -->
+    
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
-        // Dimensions
+
         const width = 500;
         const data = [100, 420, 230, 850, 560, 925];
         const barHeight = 20;
         const margin = 1;
         const height = data.length * (barHeight + margin);
 
-        // Create SVG container
         const svg = d3.select("body")
             .append("svg")
             .attr("width", width)
             .attr("height", height);
 
-        // Create linear scale for x-axis
         const xScale = d3.scaleLinear()
             .domain([d3.min(data), d3.max(data)])
             .range([50, 500]);
 
-        console.log("Linear scale configured for bar widths:", {
-            domain: xScale.domain(),
-            range: xScale.range()
-        });
+        const barGroups = svg.selectAll("g")
+            .data(data)
+            .enter()
+            .append("g")
+            .attr("transform", (d, i) => `translate(0, ${i * (barHeight + margin)})`);
+
+
+        barGroups.append("rect")
+            .attr("class", "bar")
+            .attr("width", d => xScale(d))
+            .attr("height", barHeight);
+
+      
+        barGroups.append("text")
+            .attr("x", d => xScale(d) - 3)
+            .attr("y", barHeight / 2)
+            .attr("dy", ".35em")
+            .text(d => d);
+
+        console.log("Bars and group elements rendered based on scaled data.");
     </script>
 </body>
 </html>
-
